<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Identification" android:id="@+id/frameLayout"
        android:background="#FFFFFF">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/linh1"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linv1"
            style="@style/verticalLayoutStyle" android:layout_height="0dp">

        <TextView
                android:text="@string/id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/signin_textView"
                style="@style/fragmentTitleStyle"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_input"
                style="@style/textInputLayoutStyle"
                android:hint="@string/id_phone">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    style="@style/editTextStyle" android:id="@+id/phone_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_input" android:hint="@string/id_passwd"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/editTextStyle" android:id="@+id/password_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:text="@string/id_forgot_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="10sp"
                android:gravity="end" android:textSize="12sp" android:fontFamily="@font/gothamrounded_book"
                android:id="@+id/forgot_textView"/>

        <Button
                android:id="@+id/connexion_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:text="@string/id_btn"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linh1"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/horizontalLayoutStyle">
        <TextView
                android:text="@string/id_account_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/dont_have_account_textView"/>
        <TextView
                android:text="@string/id_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/create_account_textView"
                style="@style/fragmentBottomLinkStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>