<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Inscription" android:id="@+id/frameLayout2">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linv2"
            style="@style/verticalLayoutStyle" app:layout_constraintBottom_toTopOf="@+id/linh2">
        <TextView
                android:text="@string/account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_textView"
                style="@style/fragmentTitleStyle"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_input" android:hint="@string/account_name"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle" android:id="@+id/first_name_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_input" android:hint="@string/account_last_name"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle" android:id="@+id/last_name_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_input2" android:hint="@string/account_phone"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    style="@style/editTextStyle" android:id="@+id/phone_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_input" android:hint="@string/account_address"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle" android:id="@+id/address_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ssn_input" android:hint="@string/account_nss"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/editTextStyle" android:id="@+id/nss_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                style="@style/buttonStyle"
                android:text="@string/account_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/signup_btn"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linh2"
            style="@style/horizontalLayoutStyle">
        <TextView
                android:text="@string/account_id_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/have_account_textView"/>
        <TextView
                android:text="@string/account_id_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/signin_textView"
                style="@style/fragmentBottomLinkStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>