<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".renew" android:id="@+id/frameLayout4">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linv3"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            style="@style/verticalLayoutStyle">
        <TextView
                android:text="@string/renew_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/forgot_title_textView"
                style="@style/fragmentTitleStyle"/>
        <TextView
                android:text="@string/renew_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/change_msg"
                style="@style/messageStyle" android:singleLine="false"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/renew_mdp_input" android:hint="@string/renew_passwd"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/editTextStyle" android:id="@+id/renew_passwd_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_mdp_input" android:hint="@string/renew_passwd_confirm"
                style="@style/textInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/editTextStyle" android:id="@+id/confirm_passwd_EditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                style="@style/buttonStyle"
                android:text="@string/renew_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/renew_passwd_btn"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>